<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Motivational Captcha</string>
    <string name="captcha_label">@string/app_name</string>
    <string name="difficulty">Difficulty <xliff:g id="till">%s</xliff:g></string>

    <!--Captcha Layout-->
    <!--Status Text-->
    <string name="captcha_placeholder">(Getting …)</string>
    <string name="error_text_content">You need to type every character in the quote.</string>

    <!--Instructions-->
    <string name="instruction_label">Type it</string>
    <string name="quote_source_spinner">Choose quotes source</string>

    <!-- Buttons -->
    <string name="done_button">Done</string>
    <string name="fetch_button_text">Get new quote</string>

    <!---->
    <!--Config Layout-->
    <!---->

    <!--Instruction Text-->
    <string name="settings_placeholder__pick_saved_quote_location">Saved quote location</string>
    <string name="settings_instruction__saved_quote_location">Saved quotes locations</string>
    <string name="settings_quote">Quotes</string>

    <!--Button-->
    <string name="select_button">Select</string>
    <string name="title_activity_settings">Settings</string>
</resources>
