<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="25sp"
    >

    <TextView
        android:id="@+id/timeout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:text="23"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/fetch_api_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/captcha_text"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/fetch_button_text" />

    <TextView
        android:id="@+id/captcha_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/quote_background"
        android:layout_marginBottom="10sp"
        android:text="@string/captcha_placeholder"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:focusable="true"
        android:inputType="textMultiLine"
        android:textColor="@android:color/white"
        android:layout_below="@+id/fetch_api_button"
        android:layout_toStartOf="@id/done_button"
        android:autofillHints="@string/instruction_label"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_text"
        android:layout_marginTop="10sp"
        android:textAlignment="center"
        android:visibility="invisible"
        android:text="@string/error_text_content"
        android:textColor="#fd1212" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/done_button"
        android:layout_alignTop="@+id/input_text"
        android:layout_alignEnd="@+id/timeout" />
</RelativeLayout>
